# RL_study

./: GYM_LAB2.py  GYM_LAB3.py  LAB4.py  LAB5.py  LAB6_2.py  README.md
DRL_course/: 01.Value_Iteration.py  02.Policy_Iteration.py  03.MC_method.py  04.SARSA.py  05-1.Double Q_learning.py  05-2.Q-learning with approximation.py  05.Q_learning.py  basic_grid.py  visualize.py
DRL_course/RLlib_tutorial/: basic_ray.py
DRL_course/pathplanning/: gym_maze.py
PangyoLab_Summary/: Lecture2 29fa1ac062a64a18bf458fcceb22bb12.md  Lecture3 ed204af765334dfea5a25c4b021fc736.md  Lecture4 58b66e6dff214ac29cc243c3ea7f517d.md  Lecture5 0cab34eacd21470993dcbe1a54c204d1.md  Lecture6 e96d5e3109bd4d7f8a533232a86b52bb.md  Lecture7 136df1af18334ad6bbb34e91bdbbabaf.md
RL_Paper_review/: 01_Vanila_PG.md  02_DPG.md  03_NPG.md  04_DDPG.md  05_A3C.md  06_HER.md
RL_Paper_review/SAC/: SAC.py
RL_lecture_forEveryOne/: LAB6.py  RL_Playing OpenAI GYM Games.ipynb
env_code_review/: 강화학습   로봇 팔 openAI, Fetch env.md  강화학습  로봇 팔 gazebo-gym env 리뷰.md
env_samples/: robotarm_env.py
onelink_robot/: CMakeLists.txt  package.xml
onelink_robot/config/: joint_names_onelink_robot.yaml
onelink_robot/onelink_support/: CMakeLists.txt  package.xml
onelink_robot/onelink_support/config/: joint_names_onelink.yaml
onelink_robot/onelink_support/launch/: load_onelink.launch
onelink_robot/onelink_support/urdf/: common.gazebo.xacro  onelink.xacro  onelink_macro.xacro
rl_tx90_v1/: main_env.py
torch_practice/: DQN_cartpole.py  basic.py  neural_net.py  parameter_optimize.py  torch_nn.ipynb
(+58 files in other folders)
