<package format="2">
  <name>onelink_support</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for onelink_robot</p>
    <p>This package contains configuration data, 3D models and launch files
for onelink_robot robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <depend>gazebo</depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <export>
    <architecture_independent />
  </export>
</package>
